--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -1,88 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/alarm_parent_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".presentation.screen.ui.impl.notification.AlarmActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/alarm_parent_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".presentation.screen.ui.impl.notification.AlarmActivity">
 
     <sgtmelon.scriptum.presentation.view.RippleContainer
-            android:id="@+id/alarm_ripple_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+        android:id="@+id/alarm_ripple_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-            android:id="@+id/alarm_logo_view"
-            style="@style/Image.Logo"
-            android:importantForAccessibility="no"
-            app:layout_constraintBottom_toTopOf="@id/alarm_recycler"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:alpha="0.5"/>
+        android:id="@+id/alarm_logo_view"
+        style="@style/Image.Logo"
+        android:importantForAccessibility="no"
+        app:layout_constraintBottom_toTopOf="@id/alarm_recycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:alpha="0.5" />
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/alarm_recycler"
-            style="@style/RecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@id/alarm_button_container"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/alarm_logo_view"
-            tools:alpha="0.5"
-            tools:itemCount="1"
-            tools:listitem="@layout/item_note_roll"
-            tools:visibility="visible"/>
+        android:id="@+id/alarm_recycler"
+        style="@style/RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:alpha="0"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/alarm_button_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/alarm_logo_view"
+        tools:alpha="0.5"
+        tools:itemCount="1"
+        tools:listitem="@layout/item_note_roll"
+        tools:visibility="visible" />
 
     <LinearLayout
-            android:id="@+id/alarm_button_container"
-            android:layout_width="match_parent"
+        android:id="@+id/alarm_button_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:alpha="0"
+        android:orientation="horizontal"
+        android:padding="@dimen/layout_2dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:alpha="0.5"
+        tools:visibility="visible">
+
+        <Button
+            android:id="@+id/alarm_disable_button"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:padding="@dimen/layout_2dp"
-            tools:alpha="0.5"
-            tools:visibility="visible">
+            android:layout_weight="0.5"
+            android:text="@string/button_disable"
+            android:textColor="?attr/clAccent" />
 
         <Button
-                android:id="@+id/alarm_disable_button"
-                style="@style/Base.Widget.AppCompat.Button.Borderless"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/button_disable"
-                android:textColor="?attr/clAccent"/>
-
-        <Button
-                android:id="@+id/alarm_repeat_button"
-                style="@style/Base.Widget.AppCompat.Button.Borderless"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.38"
-                android:text="@string/button_repeat"
-                android:textColor="?attr/clAccent"/>
+            android:id="@+id/alarm_repeat_button"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.38"
+            android:text="@string/button_repeat"
+            android:textColor="?attr/clAccent" />
 
         <ImageButton
-                android:id="@+id/alarm_more_button"
-                style="@style/Base.Widget.AppCompat.Button.Borderless"
-                android:contentDescription="@string/description_button_alarm_more"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.12"
-                app:srcCompat="@drawable/ic_more"
-                android:tint="?attr/clAccent"/>
+            android:id="@+id/alarm_more_button"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.12"
+            android:contentDescription="@string/description_button_alarm_more"
+            android:tint="?attr/clAccent"
+            app:srcCompat="@drawable/ic_more" />
 
     </LinearLayout>
 
