--- a/app/src/main/res/values/values_app.xml
+++ b/app/src/main/res/values/values_app.xml
@@ -6,6 +6,9 @@
 
     <integer name="color_column_count">4</integer>
 
+    <integer name="note_open_time">300</integer>
+    <integer name="note_change_time">200</integer>
+
     <integer name="fade_anim_time">200</integer>
     <integer name="color_fade_time">200</integer>
     <integer name="color_transition_time">200</integer>
