--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -1,82 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
-        <import type="sgtmelon.scriptum.domain.model.annotation.Theme"/>
 
-        <variable name="theme" type="int"/>
-        <variable name="item" type="sgtmelon.scriptum.domain.model.item.NoteItem.Roll"/>
+        <import type="android.view.View" />
+
+        <import type="sgtmelon.scriptum.domain.model.annotation.Theme" />
+
+        <variable
+            name="theme"
+            type="int" />
+
+        <variable
+            name="item"
+            type="sgtmelon.scriptum.domain.model.item.NoteItem.Roll" />
     </data>
 
     <androidx.cardview.widget.CardView
-            android:id="@+id/note_roll_parent_card"
-            style="@style/Card"
-            app:noteTheme='@{theme}'
-            app:noteColor='@{item.color}'
-            tools:cardBackgroundColor="?attr/clPrimary">
+        android:id="@+id/note_roll_parent_card"
+        style="@style/Card"
+        app:noteColor='@{item.color}'
+        app:noteTheme='@{theme}'
+        tools:cardBackgroundColor="?attr/clPrimary">
 
         <FrameLayout
-                android:id="@+id/note_roll_click_container"
-                style="@style/Container.Note.Click">
+            android:id="@+id/note_roll_click_container"
+            style="@style/Container.Note.Click">
 
             <LinearLayout style="@style/Container.Note.Content">
 
                 <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
-                            android:id="@+id/note_roll_name_text"
-                            style="@style/Text.Note.Name"
-                            android:text='@{item.name}'
-                            android:visibility='@{item.name.isEmpty() ? View.GONE : View.VISIBLE}'
-                            tools:text="@string/preview_note_name"/>
+                        android:id="@+id/note_roll_name_text"
+                        style="@style/Text.Note.Name"
+                        android:text='@{item.name}'
+                        android:visibility='@{item.name.isEmpty() ? View.GONE : View.VISIBLE}'
+                        tools:text="@string/preview_note_name" />
 
                     <include
-                            android:id="@+id/note_roll_row0_container"
-                            layout="@layout/include_item_note_roll"
-                            android:visibility="@{item.list.size() &gt;= 1 ? View.VISIBLE : View.GONE}"
-                            app:item="@{item.list.size() &gt;= 1 ? item.list.get(0) : null}"/>
+                        android:id="@+id/note_roll_row0_container"
+                        layout="@layout/include_item_note_roll"
+                        android:visibility="@{item.list.size() &gt;= 1 ? View.VISIBLE : View.GONE}"
+                        app:item="@{item.list.size() &gt;= 1 ? item.list.get(0) : null}" />
 
                     <include
-                            android:id="@+id/note_roll_row1_container"
-                            layout="@layout/include_item_note_roll"
-                            android:visibility="@{item.list.size() &gt;= 2 ? View.VISIBLE : View.GONE}"
-                            app:item="@{item.list.size() &gt;= 2 ? item.list.get(1) : null}"/>
+                        android:id="@+id/note_roll_row1_container"
+                        layout="@layout/include_item_note_roll"
+                        android:visibility="@{item.list.size() &gt;= 2 ? View.VISIBLE : View.GONE}"
+                        app:item="@{item.list.size() &gt;= 2 ? item.list.get(1) : null}" />
 
                     <include
-                            android:id="@+id/note_roll_row2_container"
-                            layout="@layout/include_item_note_roll"
-                            android:visibility="@{item.list.size() &gt;= 3 ? View.VISIBLE : View.GONE}"
-                            app:item="@{item.list.size() &gt;= 3 ? item.list.get(2) : null}"/>
+                        android:id="@+id/note_roll_row2_container"
+                        layout="@layout/include_item_note_roll"
+                        android:visibility="@{item.list.size() &gt;= 3 ? View.VISIBLE : View.GONE}"
+                        app:item="@{item.list.size() &gt;= 3 ? item.list.get(2) : null}" />
 
                     <include
-                            android:id="@+id/note_roll_row3_container"
-                            layout="@layout/include_item_note_roll"
-                            android:visibility="@{item.list.size() &gt;= 4 ? View.VISIBLE : View.GONE}"
-                            app:item="@{item.list.size() &gt;= 4 ? item.list.get(3) : null}"/>
+                        android:id="@+id/note_roll_row3_container"
+                        layout="@layout/include_item_note_roll"
+                        android:visibility="@{item.list.size() &gt;= 4 ? View.VISIBLE : View.GONE}"
+                        app:item="@{item.list.size() &gt;= 4 ? item.list.get(3) : null}" />
 
                     <include
-                            layout="@layout/include_item_note_info"
-                            app:item='@{item}'/>
+                        layout="@layout/include_item_note_info"
+                        app:item='@{item}' />
 
                 </LinearLayout>
 
                 <View
-                        android:id="@+id/note_roll_color_view"
-                        style="@style/Image.Color.Vertical.End"
-                        android:importantForAccessibility="no"
-                        app:indicatorTheme='@{theme}'
-                        app:indicatorColor='@{item.color}'
-                        app:visibleTheme='@{theme}'
-                        app:visibleOn='@{Theme.DARK}'
-                        tools:tint="@color/note_green_dark"
-                        tools:visibility="visible"/>
+                    android:id="@+id/note_roll_color_view"
+                    style="@style/Image.Color.Vertical.End"
+                    android:importantForAccessibility="no"
+                    app:indicatorColor='@{item.color}'
+                    app:indicatorTheme='@{theme}'
+                    app:visibleOn='@{Theme.DARK}'
+                    app:visibleTheme='@{theme}'
+                    tools:tint="@color/note_green_dark"
+                    tools:visibility="visible" />
 
             </LinearLayout>
 
