--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -141,6 +141,15 @@
         <item name="android:textSize">@dimen/text_14sp</item>
     </style>
 
+    <style name="Text.SmallCard.Info">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textAppearance">@style/Appearance.Second</item>
+        <item name="android:textSize">@dimen/text_14sp</item>
+    </style>
+
     <style name="Text.About">
         <item name="android:gravity">center</item>
     </style>
@@ -380,8 +389,8 @@
     <style name="Image.Rank">
         <item name="android:layout_width">@dimen/icon_16dp</item>
         <item name="android:layout_height">@dimen/icon_16dp</item>
-        <item name="android:layout_gravity">center</item>
-        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">bottom</item>
+        <item name="android:layout_marginBottom">@dimen/layout_1dp</item>
         <item name="android:tint">?attr/clContent</item>
     </style>
 
