--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/include_simple_toolbar" />
+        <include layout="@layout/inc_toolbar_simple" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -23,7 +23,7 @@
 
             <include
                 android:id="@+id/notification_info_include"
-                layout="@layout/include_info"
+                layout="@layout/inc_info"
                 app:details='@{R.string.info_notification_empty_details}'
                 app:icon='@{R.mipmap.img_info_notifications}'
                 app:title='@{R.string.info_notification_empty_title}' />
