--- a/app/src/main/res/layout/fragment_bin.xml
+++ b/app/src/main/res/layout/fragment_bin.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/include_simple_toolbar" />
+        <include layout="@layout/inc_toolbar_simple" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -22,7 +22,7 @@
 
             <include
                 android:id="@+id/bin_info_include"
-                layout="@layout/include_info"
+                layout="@layout/inc_info"
                 app:details='@{R.string.info_bin_empty_details}'
                 app:icon='@{R.mipmap.img_info_bin}'
                 app:title='@{R.string.info_bin_empty_title}' />
