--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -18,7 +18,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/include_simple_toolbar" />
+        <include layout="@layout/inc_toolbar_simple" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -26,7 +26,7 @@
 
             <include
                 android:id="@+id/notes_info_include"
-                layout="@layout/include_info"
+                layout="@layout/inc_info"
                 app:details='@{isListHide ? R.string.info_notes_hide_details : R.string.info_notes_empty_details}'
                 app:icon='@{R.mipmap.img_info_notes}'
                 app:title='@{isListHide ? R.string.info_notes_hide_title : R.string.info_notes_empty_title}' />
