--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -25,7 +25,7 @@
         android:orientation="vertical">
 
         <include
-            layout="@layout/include_toolbar_rank"
+            layout="@layout/inc_toolbar_rank"
             app:isAddEnable='@{isAddEnable}'
             app:isClearEnable='@{isClearEnable}' />
 
@@ -36,7 +36,7 @@
 
             <include
                 android:id="@+id/rank_info_include"
-                layout="@layout/include_info"
+                layout="@layout/inc_info"
                 app:details='@{R.string.info_rank_empty_details}'
                 app:icon='@{R.mipmap.img_info_rank}'
                 app:title='@{R.string.info_rank_empty_title}' />
