--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -391,6 +391,7 @@
         <item name="android:layout_height">@dimen/icon_16dp</item>
         <item name="android:layout_gravity">bottom</item>
         <item name="android:layout_marginBottom">@dimen/layout_1dp</item>
+        <item name="android:layout_marginStart">@dimen/layout_1dp</item>
         <item name="android:tint">?attr/clContent</item>
     </style>
 
