--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -41,9 +41,9 @@
         <attr name="clDisable" format="color" />
     </declare-styleable>
 
-    <!--  Attr for control note indicators color in list. (Switch by theme)  -->
-    <declare-styleable name="NoteTheme">
-        <attr name="clNoteIndicator" format="color" />
+    <!--  Attr for control card text and indicators color in list. (Switch by theme)  -->
+    <declare-styleable name="CardTheme">
+        <attr name="clCardIndicator" format="color" />
     </declare-styleable>
 
     <!--  Attr for control view styles. (Switch by theme)  -->
